# multi-agent-aya-for-workforce

./: .gitignore  LICENSE  README.md  chat_app.py  multi-agent-chat.py  pyproject.toml
.github/workflows/: dev.yaml
datasets/: README.md
experiments/: init.ipynb
ml_chat/playground/: Untitled.ipynb
ml_chat/server/: README.md  agents.py  start_server.py  test.py  user_list.csv  workflow.py
multi-agent-aya-for-workforce/mvp/: README.md
static/: chat.html
